[gd_scene load_steps=2 format=2]

[ext_resource path="res://test/inventory/RectanglePacker.gd" type="Script" id=1]

[node name="RectanglePacker" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 86, 43 )
current = true
zoom = Vector2( 0.1, 0.1 )

[node name="ReferenceRect1" type="ReferenceRect" parent="."]
margin_left = -1.0
margin_top = -1.0
margin_right = 161.0
margin_bottom = 36.0
border_color = Color( 1, 1, 1, 1 )
editor_only = false

[node name="ReferenceRect2" type="ReferenceRect" parent="."]
margin_left = -3.0
margin_top = -3.0
margin_right = 159.0
margin_bottom = 34.0
border_color = Color( 0.643137, 0.121569, 0.121569, 1 )
editor_only = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UpdateButton" type="Button" parent="CanvasLayer"]
margin_left = 6.0
margin_top = 28.0
margin_right = 62.0
margin_bottom = 48.0
focus_mode = 0
text = "update"

[node name="HeightSlider" type="HSlider" parent="CanvasLayer"]
margin_left = 5.0
margin_top = 4.0
margin_right = 520.0
margin_bottom = 29.0
max_value = 200.0
tick_count = 20

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 73.0
margin_top = 30.0
margin_right = 113.0
margin_bottom = 44.0

[node name="Label2" type="Label" parent="CanvasLayer"]
margin_left = 273.0
margin_top = 30.0
margin_right = 313.0
margin_bottom = 44.0

[node name="SliderValue" type="Label" parent="CanvasLayer"]
margin_left = 524.0
margin_top = 9.0
margin_right = 564.0
margin_bottom = 23.0

[node name="Polygon2D" type="Polygon2D" parent="."]

[connection signal="pressed" from="CanvasLayer/UpdateButton" to="." method="_on_UpdateButton_pressed"]
[connection signal="value_changed" from="CanvasLayer/HeightSlider" to="." method="_on_HSlider_value_changed"]
